# pythondev

./: Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
pythondev/: pythondev.py
tests/: test_sample.py
